--- a/index.html
+++ b/index.html
@@ -64,5 +64,40 @@
         </div>
       </div>
     </section>
+    <!-- blog section -->
+    <section class="blog-section">
+      <div class="wrapper">
+        <div class="col">
+          <div class="blog red">
+            <img src="images/living-room-7939062.svg" alt="" />
+            <h3>Unleash your creativity</h3>
+            <p>
+              Turn bold ideas into beautiful results with tools that adapt to
+              your vision.
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="blog green">
+            <img src="images/percent-3331250.svg" alt="" />
+            <h3>Get more result</h3>
+            <p>
+              Achieve greater impact by transforming your efforts into
+              measurable success and lasting value.
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="blog yellow">
+            <img src="images/meeting-152506.svg" alt="" />
+            <h3>Increase your audience</h3>
+            <p>
+              Reach more people, build stronger connections, and grow your
+              community with powerful strategies.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
